--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -14,11 +14,13 @@
       }
       .logo {
         flex-grow: 2;
+        margin-right: 10rem;
         text-align: center;
       }
       .options {
+        //margin-right: rem;
         font-size: 19px;
-        flex-grow: 3;
+        flex-grow: 4;
       .nav-link {
         &.active {
           color: #e8073f;
@@ -39,8 +41,8 @@
       }
   
     .search-box {
-      flex-grow: 4;
-      float:right;
+      flex-grow: 2;
+    
       input {
         width: 100%;
       }
@@ -58,8 +60,8 @@
       float: right !important;
   }
     .end {
-      flex-grow: 1;
-      //float: left !important;
+      margin-right: 2rem;
+      //flex-grow: 1;
       font-size: 19px;
       .login {
         padding-left: 10px;
