--- a/src/app/recipes/browse/browse.component.html
+++ b/src/app/recipes/browse/browse.component.html
@@ -8,15 +8,25 @@
     <ng-template #loaded>
       <div *ngIf="!recipeFound; else found">No Recipes were found in the database</div>
       <ng-template #found>
-        <div class ="sort">
+        <div class="filter-wrapper">
+          
           <p-dropdown
             [options]="sortOptions"
             [(ngModel)]="selectedSortOption"
             optionLabel="label"
-            [placeholder]="'Select a Sorting Option'"
+            [placeholder]="'Sort by'"
             (onChange)="onSortOptionChange()"
           ></p-dropdown>
+        
+          <p-multiSelect
+            [options]="ingredients" 
+            [(ngModel)]="selectedIngredients" 
+            [placeholder]="'Ingredients'"
+            (onChange)="onFilterOptionChange()"
+          ></p-multiSelect>
+          
         </div>
+        
         <div class="col-md-4 col-sm-8 col-xs-16" *ngFor="let recipe of getRecipesForPage(currentPage); let i = index">
           <div class="card mb-3 recipe-card">
             <a [routerLink]="['/recipes', recipe.id]">
@@ -27,8 +37,8 @@
                 <h3 class="card-title">{{ recipe.recipeName }}</h3>
                 <p class="card-text">Ingredients: {{ recipe.ingredients }}</p>
                 <p class="card-rating"></p>
-                <!-- <p-rating [(ngModel)]="recipe.rating" [readonly]="true" [cancel]="false"></p-rating> -->
-                <p-rating class="mt-2" [(ngModel)]="value" [cancel]="false"></p-rating>
+                <p-rating [(ngModel)]="recipe.rating" [readonly]="true" [cancel]="false"></p-rating>
+                <!-- <p-rating class="mt-2" [(ngModel)]="value" [cancel]="false"></p-rating> -->
               </div>
             </a>
           </div>
