--- a/src/app/recipes/browse/browse.component.scss
+++ b/src/app/recipes/browse/browse.component.scss
@@ -3,6 +3,12 @@
   top: 60px;
   min-height: 50vh;
 }
+.filter-wrapper {
+  display: flex; 
+  align-items: center; 
+  gap: 16px; 
+  padding: 10px;
+}
 .recipe-card:hover{
   border-radius: 10px;
   -webkit-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
