--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -22,6 +22,23 @@
             <input pInputText id="" formControlName="dietaryRestrictions" [(ngModel)]="recipe.dietaryRestrictions"  placeholder="Enter Steps" type="text" />
         </div>
         <div class="field">
+            <label>Category </label>
+            <p-dropdown 
+            [options]="categories" 
+            [(ngModel)]="selectedCategory" 
+            optionLabel="categoryName"
+            [placeholder]="'Add Category'"
+            (onChange)="onCategoryOptionChange()"
+            ></p-dropdown>
+            
+            
+        
+    </div>
+        
+        <div class="field">
             <button pButton type="submit">Edit</button>
         </div>
     </div>
+
+
+    
