--- a/src/app/recipes/recipe-form/recipe-form.component.html
+++ b/src/app/recipes/recipe-form/recipe-form.component.html
@@ -26,8 +26,8 @@
             optionLabel="categoryName"
             [placeholder]="'Add Category'"
             (onChange)="onCategoryOptionChange()"
-          ></p-dropdown>
-    <div class="field">
+    ></p-dropdown>
+    <div class="field mt-3">
         <button pButton (click)="postRecipe()">Add</button>
     </div>
 </div>
