--- a/src/app/users/login/login.component.html
+++ b/src/app/users/login/login.component.html
@@ -33,6 +33,10 @@
                     </p-button>
                     <p-button styleClass="p-button-outlined p-button-danger" type="button" [routerLink]="['']" routerLinkActive="router-link-active" >Cancel</p-button>
                 </div>
+                <div class="mt-3">
+                    <span class="align-self-center">Doesn't have an account?</span>
+                    <span [routerLink]="['/Register']" routerLinkActive="router-link-active" class="text-decoration-underline mx-2">Register</span>
+                </div>
             </div>
         </form> 
     </div>
