--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -30,3 +30,17 @@
 {
     animation-play-state: running;
 }
+
+.recipe-image {
+    width: 100%
+}
+
+.overlay {
+    background-color: rgba(241, 244, 247, 0.604);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    z-index: 999;
+}
