--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,10 @@ body {
     font-weight: 700 !important;
     font-size: 42px;
 }
+
+.recipe-card:hover{
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
+    -moz-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
+    box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
+  }
