done-toast-messages
Edit and delete Toasters added

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -33,6 +33,6 @@
             <button pButton type="submit">Edit</button>
         </div>
     </div>
-
+    <p-toast [life]="3000"></p-toast>
 </form>
     
