Add-edit-delete-Toasters

--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -36,7 +36,7 @@
 }
 
 .overlay {
-    background-color: rgba(241, 244, 247, 0.604);
+    background: linear-gradient( rgba(241, 244, 247, 0.604) 30%,  rgba(51, 126, 201, 0.756));
     position: absolute;
     width: 100%;
     height: 100%;
