--- a/src/app/recipes/my-recipes/my-recipes.component.html
+++ b/src/app/recipes/my-recipes/my-recipes.component.html
@@ -45,6 +45,7 @@
         </div>
     </ng-template>
     </p-toast>
+    <p-toast [life]="3500"></p-toast>
     <!-- <button type="button" pButton pRipple (click)="showConfirm()" label="Confirm"></button> -->
 </div>
               </div>
