--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <section class="fixed ">
     <div class="card ps-4 vh-100">
 
-        <div class="col-12">
+        <div class="col-12 border-0">
             <div class="m-0 card-w-title">
-                <p-menu [model]="plainMenuItems"></p-menu>
+                <p-menu class="border-0 border-white" [model]="plainMenuItems"></p-menu>
             </div>
             <!-- <div class="mt-3 card-w-title">
                 <p-menu [model]="plainMenuItems"></p-menu>
