--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,4 +23,23 @@ body {
     -webkit-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
     -moz-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
     box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
+}
+
+input[type=file]::file-selector-button {
+    margin-right: 20px;
+    border: none;
+    background: #3B82F6;
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+}
+
+input[type=file]::file-selector-button:hover {
+    background: #0d45a5;
+}
+
+::ng-deep .p-menubar {
+    border: red !important;
   }
