--- a/src/app/recipes/recipe-page/recipe-page.component.html
+++ b/src/app/recipes/recipe-page/recipe-page.component.html
@@ -18,7 +18,7 @@
                 <section class="card px-6">
                     <span class="block text-4xl font-bold ">{{recipe.recipeName}}</span>
                     <p-rating class="mt-2" [(ngModel)]="value" [cancel]="false"></p-rating>
-                    <p class="mt-1">Categories: <span class="fw-bold text-primary-800">{{recipe}}</span></p>
+                    <p class="mt-1">Category : <span class="fw-bold text-primary-800">{{ findCategoryName(recipe.categoryId)}}</span></p>
                     <!-- <p class="card-text"></p><p-rating [(ngModel)]="recipe.rating" [readonly]="true" [cancel]="false"></p-rating> -->
                     <div class="text-3xl text-primary font-bold mt-2">Ingredients</div>
                     <ul class="mt-0 mb-2 text-700 line-height-3">
