--- a/src/app/recipes/recipe-form/recipe-form.component.html
+++ b/src/app/recipes/recipe-form/recipe-form.component.html
@@ -30,5 +30,5 @@
     <div class="field mt-3">
         <button pButton (click)="postRecipe()">Add</button>
     </div>
-    <p-toast [life]="3000"></p-toast>
+    <p-toast [life]="3000" key="show"></p-toast>
 </div>
