--- a/src/app/recipes/browse/browse.component.html
+++ b/src/app/recipes/browse/browse.component.html
@@ -51,6 +51,38 @@
             </a>
           </div>
         </div>
+        <div class="col-md-4 col-sm-8 col-xs-16" *ngFor="let recipe of getRecipesForPage(currentPage); let i = index">
+          <div class="card mb-3 recipe-card">
+            <a [routerLink]="['/recipes', recipe.id]">
+              <div class="card-img-container">
+                <img [src]="'https://localhost:7288/' + recipe.image" class="recipe-image rounded-3" alt="recipe image">
+              </div>
+              <div class="card-body text-center" style="height: 100px;">
+                <h3 class="card-title">{{ recipe.recipeName }}</h3>
+                <p class="card-text">Ingredients: {{ recipe.ingredients }}</p>
+                <p class="card-rating"></p>
+                <p-rating [(ngModel)]="recipe.rating" [readonly]="true" [cancel]="false"></p-rating>
+                <!-- <p-rating class="mt-2" [(ngModel)]="value" [cancel]="false"></p-rating> -->
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-8 col-xs-16" *ngFor="let recipe of getRecipesForPage(currentPage); let i = index">
+          <div class="card mb-3 recipe-card">
+            <a [routerLink]="['/recipes', recipe.id]">
+              <div class="card-img-container">
+                <img [src]="'https://localhost:7288/' + recipe.image" class="recipe-image rounded-3" alt="recipe image">
+              </div>
+              <div class="card-body text-center" style="height: 100px;">
+                <h3 class="card-title">{{ recipe.recipeName }}</h3>
+                <p class="card-text">Ingredients: {{ recipe.ingredients }}</p>
+                <p class="card-rating"></p>
+                <p-rating [(ngModel)]="recipe.rating" [readonly]="true" [cancel]="false"></p-rating>
+                <!-- <p-rating class="mt-2" [(ngModel)]="value" [cancel]="false"></p-rating> -->
+              </div>
+            </a>
+          </div>
+        </div>
       </ng-template>
     </ng-template>
     <p-paginator (onPageChange)="onPageChange($event)" [rows]="rows" [totalRecords]="recipes.length"></p-paginator>
