--- a/src/app/recipes/favourites/favourites.component.html
+++ b/src/app/recipes/favourites/favourites.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row my-5">
-        <div *ngIf="isLoading; else loaded">
+        <div *ngIf="false; else loaded">
             <div class="card" style="display: flex; justify-content: center; align-items: center;">
                 <p-progressSpinner></p-progressSpinner>
             </div>
