--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -29,7 +29,7 @@
             
         </div>
         
-        <div class="field">
+        <div  class="field mt-3">
             <button pButton type="submit">Edit</button>
         </div>
     </div>
