--- a/src/app/recipes/recipe-page/recipe-page.component.html
+++ b/src/app/recipes/recipe-page/recipe-page.component.html
@@ -5,7 +5,7 @@
             <div class="col-6 pt-8 pb-3 md:col-6 d-flex flex-column align-items-center overflow-hidden">
                 <img [src]="'https://localhost:7288/' + recipe.image" alt="{{recipe.recipeName}}" class="card-img rounded mt-0 mb-2 max-h-25rem max-w-30rem m-auto d-block" >
                 <p-messages key="diet" [(value)]="messages" [enableService]="true" [closable]="false"></p-messages>
-                <h3>{{value}}</h3>
+                <!-- <h3>{{value}}</h3> -->
                 <!-- <div class="scrolldown-wrapper">
                     <div class="scrolldown">
                         <svg height="30" width="10">
